--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "_comment_dev_original": "astro dev",
     "dev": "npx --node-options='--max-old-space-size=8192' astro dev",
     "dev:normal": "astro dev",
-    "_comment_start_original": "astro dev", 
+    "_comment_start_original": "astro dev",
     "start": "npx --node-options='--max-old-space-size=8192' astro dev",
     "_comment_build_original": "astro build",
     "build": "npx --node-options='--max-old-space-size=8192' astro build",
@@ -18,6 +18,7 @@
     "@astrojs/starlight": "^0.35.2",
     "astro": "^5.13.5",
     "sharp": "^0.34.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "starlight-theme-rapide": "^0.5.1"
   }
 }
