feat: Add Dynamic Breadcrumb component and utility for Tipitaka content
- Implemented DynamicBreadcrumb component to display breadcrumbs based on the current path.
- Created breadcrumb-builder utility for dynamic breadcrumb generation, including functions to clean titles and determine breadcrumb structure.
- Added tests for the getEntry function to ensure proper retrieval of content entries.

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ src/content/docs/sinh/*
 src/content/docs/thai/*
 src/content/docs/mymr/*
 # except
-!src/content/docs/romn/tipitaka/v/paraj/
+# !src/content/docs/romn/tipitaka/v/paraj/
 
 # python/
 python/json
