Remove unused CSS files and add new components for Tipitaka sections and paragraphs
- Deleted `src/fonts.css` and `src/global.css` as they are no longer needed.
- Introduced `Division.astro` component to represent divisions/sections with metadata for PageFind.
- Introduced `Paragraph.astro` component to represent numbered paragraphs with customizable types and metadata for PageFind.
- Enhanced styling for both components to support responsive design and dark mode.

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ src/content/docs/sinh/*
 src/content/docs/thai/*
 src/content/docs/mymr/*
 # except
-# !src/content/docs/romn/tipitaka/v/paraj/
+!src/content/docs/romn/tipitaka/vi/paci/1/1-8/1-8-7.mdx*
 
 # python/
 python/json
