feat: update Paragraph styles and add Emphasis component
- Increased text-indent for paragraph-normal and paragraph-section from 2em to 5em.
- Adjusted margin-left for italic paragraphs from 35% to 25%.
- Introduced Emphasis component for highlighting specific text with customizable styles.
- Updated content in 1-8-7.mdx to utilize the new Emphasis component for better text representation.
- Added build-locale.js script for building Tipitaka dataset with support for multiple locales.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ src/content/docs/lana/*
 src/content/docs/laoo/*
 src/content/docs/latn/*
 src/content/docs/romn/*
+src/content/docs/romn_bk/*
 src/content/docs/sinh/*
 src/content/docs/thai/*
 src/content/docs/mymr/*
@@ -49,3 +50,4 @@ python/md/tipitaka/*
 .astro/
 .vscode/
 *.db
+
