--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "starlight-theme-rapide": "^0.5.1"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^6.1.0",
     "cross-env": "^10.0.0",
     "rimraf": "^5.0.5"
   }
