Simplify build script in package.json by removing memory limit settings

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "cross-env NODE_OPTIONS=\"--max-old-space-size=81920\" astro build",
-    "build:clean": "rimraf dist .astro && cross-env NODE_OPTIONS=\"--max-old-space-size=81920\" astro build",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
