--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "tptk",
   "type": "module",
   "version": "0.0.1",
-    "scripts": {
-        "dev": "astro dev",
-        "start": "astro dev",
-        "build": "astro build",
-        "preview": "astro preview",
-        "astro": "astro"
-    },
-    "dependencies": {
-        "@astrojs/starlight": "^0.36.0",
-        "astro": "^5.6.1",
-        "sharp": "^0.34.2"
-    } 
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/netlify": "^6.5.11",
+    "@astrojs/starlight": "^0.36.0",
+    "astro": "^5.6.1",
+    "sharp": "^0.34.2"
+  }
 }
