Enhance Astro configuration and implement SSR for Tipitaka pages
- Update Vercel adapter settings for improved performance and caching.
- Enable hybrid rendering in Astro config.
- Refactor page loading logic to support on-demand data fetching.
- Remove deprecated static test pages for Tipitaka.
- Add cache control headers for optimized asset delivery.

--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
         }
       ]
     },
@@ -25,6 +29,32 @@
           "value": "public, max-age=31536000, immutable"
         }
       ]
+    },
+    {
+      "source": "/tipitaka/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, stale-while-revalidate=86400"
+        }
+      ]
+    },
+    {
+      "source": "/_astro/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
     }
-  ]
+  ],
+  "functions": {
+    "dist/server/pages/tipitaka/[edition]/[volume]/[page].astro.js": {
+      "memory": 512,
+      "maxDuration": 15
+    }
+  },
+  "cleanUrls": true,
+  "trailingSlash": false
 }
