--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "node --max-old-space-size=16384 ./node_modules/astro/astro.js build",
     "preview": "astro preview",
     "deploy": "vercel --prod",
     "deploy:preview": "vercel",
