--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,7 @@ python/md/tipitaka/
 .vscode/
 
 # public - exclude all scanned images from git (stored on DigitalOcean Spaces)
-public/tipitaka/
+public/tipitaka/ch/
+public/tipitaka/chr/
+public/tipitaka/mc/
 
